# jupiter-swap-api-client

./: Cargo.toml  README.md  rust-toolchain.toml
autobahn-swap-api-client/: Cargo.toml
autobahn-swap-api-client/src/: lib.rs  route_plan_with_metadata.rs  swap.rs  transaction_config.rs
autobahn-swap-api-client/src/serde_helpers/: option_field_as_string.rs
example/: Cargo.toml
example-autobahn/: Cargo.toml
example-autobahn/src/: main.rs
example/src/: main.rs
jupiter-swap-api/: Cargo.toml
jupiter-swap-api-client/: Cargo.toml  README.md
jupiter-swap-api-client/src/: lib.rs  quote.rs  route_plan_with_metadata.rs  swap.rs  transaction_config.rs
jupiter-swap-api-client/src/serde_helpers/: field_as_base64.rs  mod.rs  option_field_as_string.rs  query_extra_args.rs  serialize_comma_separated.rs  vec_as_comma_separated.rs
jupiter-swap-api/src/: lib.rs  swap.rs
