[package]
name = "example"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"

[dependencies.jupiter-swap-api-client]
path = "../jupiter-swap-api-client"
#default-features = false
#features = ["rustls-tls"]
