[package]
name = "example"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = "3"
solana-transaction = "3"
bincode = "1.3.3"