[package]
name = "jupiter-swap-api-client"
version = "0.2.0"
description = "Jupiter Swap API rust client"
license = "Apache-2.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rust_decimal = "1.36"
solana-sdk = { workspace = true } 
solana-account-decoder = { workspace = true }
