[package]
name = "jupiter-swap-api-client"
version = "0.2.0"
description = "Jupiter Swap API rust client"
license = "Apache-2.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-account-decoder = { workspace = true }
thiserror = "2"
base64 = "0.22"
serde_qs = "0.13"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.36"
